--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-    "name": "ai-auditor-backend",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@genezio/types": "^1.0.14",
-        "node-fetch": "^3.3.2"
-    },
-    "prettier": {
-        "tabWidth": 2
-    },
-    "devDependencies": {
-        "@types/node": "^20.11.15",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "eslint": "^8.55.0"
-    }
+  "name": "ai-auditor-backend",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@genezio/types": "^1.0.14",
+    "@langchain/core": "^0.3.57",
+    "@langchain/openai": "^0.5.12",
+    "dotenv": "^16.5.0",
+    "langchain": "^0.3.27",
+    "zod": "^3.25.56"
+  },
+  "prettier": {
+    "tabWidth": 2
+  },
+  "devDependencies": {
+    "@types/node": "^20.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0"
+  }
 }
