--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@langchain/core": "^0.3.57",
     "@langchain/openai": "^0.5.12",
     "dotenv": "^16.5.0",
+    "ethers": "^6.16.0",
     "langchain": "^0.3.27",
     "zod": "^3.25.56"
   },
