--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev": "npx tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@genezio/types": "^1.0.14",
     "@langchain/core": "^0.3.57",
     "@langchain/openai": "^0.5.12",
+    "@types/express": "^5.0.6",
     "dotenv": "^16.5.0",
     "ethers": "^6.16.0",
+    "express": "^5.2.1",
     "langchain": "^0.3.27",
     "zod": "^3.25.56"
   },
@@ -23,6 +25,7 @@
     "@types/node": "^20.19.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "tsx": "^4.21.0"
   }
 }
